--- a/weather/webc.css
+++ b/weather/webc.css
@@ -66,7 +66,7 @@ header{
     background-image: linear-gradient(to right, purple 0%, green 50%, red 100%)
 }
 #about{
-    position: relative;
+    display:flex;
     margin: auto;
     width: 95%;
     height: 60vh;
@@ -134,7 +134,7 @@ header{
 }
 #digit-clock-container{
     width: 250px;
-    height: 70px;
+    height: 60vh;
     display: inline-block;
 }
 #digit-clock-box{
@@ -150,7 +150,6 @@ header{
 }
 #me{
     display: inline-block;
-    position: absolute;
     width: 250px;
     height: 100%;
     background-color: lightsalmon;
@@ -168,4 +167,10 @@ header{
     width: 100%;
     height: 60%;
     background-image: linear-gradient(to right, rgb(49, 179, 176), rgba(78, 12, 86, 0.1));
+}
+#show-weather-container{
+    display: inline-block;
+    width: 250px;
+    height: 100%;
+    border: 1px solid pink;
 }
